--- a/.env.example
+++ b/.env.example
@@ -58,8 +58,8 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-ZOHO_CLIENT_ID="1000.R9XAGNKGVFK7L09OUZ81VOYFBFJDWM"
-ZOHO_CLIENT_SECRET="758e7f30b8822254eb68f1a4e7a795071307579019"
-ZOHO_REDIRECT_URI="http://127.0.0.1:8000/auth/zoho/callback"
+ZOHO_CLIENT_ID=""
+ZOHO_CLIENT_SECRET=""
+ZOHO_REDIRECT_URI=""
 ZOHO_API_ENDPOINT="https://www.zohoapis.com/books/v3/"
 QUEUE_CONNECTION="database"
